Fix cursor jumping on end of paragraph on Medium editor

--- a/src/component/button/FormLine.css
+++ b/src/component/button/FormLine.css
@@ -73,6 +73,11 @@
 	padding: 10px !important;
 }
 
+.medium-editor-toolbar-form {
+	padding: 3px;
+	background-color:  black;
+}
+
 .Formline-datetime input {
 	position: absolute;
 }
